--- a/src/presentation/scss/app.scss
+++ b/src/presentation/scss/app.scss
@@ -22,3 +22,9 @@
 @import "./layouts/_offline.scss";
 @import "./layouts/default.scss";
 @import "./components/index.scss";
+
+
+
+form label {
+    color: black;
+}
